using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorConstants
{
    public const string MOVING_FORWARD_TAG = "MovingForward";
    public const string MOVING_BACKWARD_TAG = "MovingBackward";
    public const string TURNING = "Turning";
    public const string TURNING_MIRROR = "TurningMirror";
    public const string GAME_OVER = "GameOver";
}
